# cxx_random

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cdf.tcc  cmake_clean.sh  dirichlet_distribution.h  dirichlet_distribution.tcc  histogram.h  simplex.h  test.cpp  test.tcc  test_dirichlet_distribution.cpp  test_simplex.h  test_uniform_inside_sphere_distribution.cpp  test_uniform_inside_tetrahedron_distribution.cpp  test_uniform_inside_triangle_distribution.cpp  test_von_mises_fisher_distribution.cpp  uniform_inside_sphere_distribution.h  uniform_inside_sphere_distribution.tcc  uniform_inside_tetrahedron_distribution.h  uniform_inside_triangle_distribution.h  von_mises_fisher_distribution.h
include/ext/: dirichlet_distribution.h  histogram.h  uniform_inside_sphere_distribution.h  uniform_inside_tetrahedron_distribution.h  uniform_inside_triangle_distribution.h  von_mises_fisher_distribution.h  von_mises_fisher_distribution.tcc
mixmax/: Makefile  N240_12000.out  N256_12000.out  driver_gsl.c  driver_iotest.c  driver_main.c  driver_testU01.c  driver_threads.c  example.cpp  mathematica.txt  mixmax.c  mixmax.cpp  mixmax.h  mixmax.hpp
pr83237/: .gitignore  Makefile  patch_for_latest_version  plot_poisson.sh  test_poisson.cpp  test_poisson.txt
